<resources>
    <string name="app_name">Restraunt</string>


    <string name="str_img1">Hotel View 01</string>
    <string name="str_img2">Hotel View 02</string>
    <string name="str_img3">Hotel View 03</string>
    <string name="str_img4">Hotel View 04</string>
    <string name="str_img5">Hotel View 05</string>
    <string name="str_img6">Hotel View 06</string>


    <string name="some_text">
     Some Starter dishes!
 </string>
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="year">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>

    </string-array>
    <string name="title_activity_la">la</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name1="title_activity_la">la</string>

    <string name1="hello_world">Hello world!</string>
    <string name1="action_settings">Settings</string>
    <string name1="title_activity_user">UserActivity</string>
    <string name1="login_text">Login Page</string>
    <string name1="username_text">User Name</string>
    <string name1="password_text">Password</string>
    <string name1="attempt_text">Attempt</string>
    <string name1="button_login_text">Login</string>
    <string name1="screen_page_text">Welcome  to the second page</string>


</resources>

