<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"

    android:background="@drawable/background3"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="Welcome to Falalala Cafe"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="382dp">

        <ViewFlipper
            android:id="@+id/flipper1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:flipInterval="1500"
            android:inAnimation="@anim/anim2"
            android:outAnimation="@anim/anim">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/str_img1"
                android:src="@drawable/hotel1" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/str_img2"
                android:src="@drawable/hotel2" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/str_img3"
                android:src="@drawable/hotel3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/str_img4"
                android:src="@drawable/hotel4" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/str_img5"
                android:src="@drawable/hotel5" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/str_img6"
                android:src="@drawable/hotel6" />

        </ViewFlipper>

    </RelativeLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="290dp"

        android:onClick="tableBooking"
        android:text="NEXT"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

</LinearLayout>
